centjes-gen/test_resources/balance/error/as-is/BE_ACCOUNT_TYPE_ASSERTION.cent
account assets

2023-12-21
  | Wrong way around, but still balanced
  assets -1 USD
  income +1 USD
